# test0

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements-worker.txt  requirements.txt  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  tests.yml
alembic/: env.py
changelog/: index.html
chart/shomer/: Chart.yaml  values.yaml
chart/shomer/templates/: NOTES.txt  _helpers.tpl  beat-deployment.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
code_of_conduct/: index.html
contributing/: index.html
docs/: gen_pages.py  index.md  install.md  mkdocstrings.md  release.md
docs/overrides/partials/: content.html
features/: api.feature  docs.feature  environment.py  ui.feature
features/steps/: http_steps.py  ui_steps.py
install/: index.html
license/: index.html
mkdocstrings/: index.html
release/: index.html
scripts/: add_license_header.py  generate_favicon.py
search/: search_index.json
src/shomer/: __init__.py  app.py  cli.py  worker.py
src/shomer/core/: __init__.py  database.py  settings.py
src/shomer/routes/: __init__.py  docs.py  health.py  views.py
src/shomer/tasks/: __init__.py
src/shomer/templates/: index.html
stylesheets/: extra.css
tests/: test_app.py  test_cli.py  test_version.py  test_worker.py
tests/core/: __init__.py  test_database.py  test_settings.py
tests/routes/: test_docs.py  test_health.py  test_views.py
